--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Gamma - Opyn v2</title>
+    <title> Opyn V2 Monitor </title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
